<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainUI</class>
 <widget class="QWidget" name="MainUI">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>862</width>
    <height>640</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">* {
background-color: black;
color: white;
font: 24px;
}

QPushButton:disabled {
background-color: rgb(67, 67, 67);
border-color: rgb(67, 67, 67);
}



QPushButton {
color: black;
background-color: yellow;

border-width: 1px;
border-color: yellow;
border-style: solid;

border-radius: 10px;

min-width: 3em;
min-height: 30px;
padding: 6px;
}

QPushButton:pressed {
background-color: rgb(255, 193, 0);
border-color: rgb(255, 193, 0);
}

QPushButton:hover {
border-color: rgb(255, 193, 0);
}

QPushButton:default {
background-color: rgb(255, 255, 255);
}</string>
  </property>
  <property name="locale">
   <locale language="English" country="UnitedStates"/>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_2">
   <item>
    <widget class="QFrame" name="frmInitial">
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
     <property name="lineWidth">
      <number>0</number>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <spacer name="verticalSpacer_4">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>24</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="cmdLocalGame">
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="locale">
         <locale language="English" country="UnitedStates"/>
        </property>
        <property name="text">
         <string>Two local players</string>
        </property>
        <property name="autoDefault">
         <bool>false</bool>
        </property>
        <property name="flat">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="cmdIAGame">
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="locale">
         <locale language="English" country="UnitedStates"/>
        </property>
        <property name="text">
         <string>Play against computer</string>
        </property>
        <property name="autoDefault">
         <bool>false</bool>
        </property>
        <property name="flat">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="verticalSpacer_3">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>28</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="cmdAbout">
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
         <string>About</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QFrame" name="frmAIGame">
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QPushButton" name="cmdLocalBackAI">
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
           <string>←</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="cmdNewAIGame">
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
           <string>↺</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QFrame" name="frmLocalGame">
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="cmdLocalBack">
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
           <string>←</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="cmdNewLocalGame">
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
           <string>↺</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QFrame" name="frmAbout">
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
       <widget class="QPushButton" name="cmdAboutBack">
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
         <string>←</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;explosive-c4&lt;/span&gt;&lt;/p&gt;&lt;p&gt;GPLv3 License &lt;/p&gt;&lt;p&gt;Contact: Salvo 'LtWorf' Tomaselli &amp;lt;tiposchi@tiscali.it&amp;gt; &lt;/p&gt;&lt;p&gt;https://github.com/ltworf/explosive-c4&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>313</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>cmdLocalBack</sender>
   <signal>clicked()</signal>
   <receiver>frmLocalGame</receiver>
   <slot>hide()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>292</x>
     <y>163</y>
    </hint>
    <hint type="destinationlabel">
     <x>307</x>
     <y>194</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdLocalBack</sender>
   <signal>clicked()</signal>
   <receiver>frmInitial</receiver>
   <slot>show()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>270</x>
     <y>163</y>
    </hint>
    <hint type="destinationlabel">
     <x>137</x>
     <y>247</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdLocalGame</sender>
   <signal>clicked()</signal>
   <receiver>frmInitial</receiver>
   <slot>hide()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>131</x>
     <y>69</y>
    </hint>
    <hint type="destinationlabel">
     <x>192</x>
     <y>110</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdLocalGame</sender>
   <signal>clicked()</signal>
   <receiver>frmLocalGame</receiver>
   <slot>show()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>67</x>
     <y>66</y>
    </hint>
    <hint type="destinationlabel">
     <x>244</x>
     <y>190</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdLocalBackAI</sender>
   <signal>clicked()</signal>
   <receiver>frmInitial</receiver>
   <slot>show()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>243</x>
     <y>433</y>
    </hint>
    <hint type="destinationlabel">
     <x>200</x>
     <y>258</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdLocalBackAI</sender>
   <signal>clicked()</signal>
   <receiver>frmAIGame</receiver>
   <slot>hide()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>200</x>
     <y>422</y>
    </hint>
    <hint type="destinationlabel">
     <x>187</x>
     <y>449</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdIAGame</sender>
   <signal>clicked()</signal>
   <receiver>frmAIGame</receiver>
   <slot>show()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>135</x>
     <y>148</y>
    </hint>
    <hint type="destinationlabel">
     <x>178</x>
     <y>371</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdIAGame</sender>
   <signal>clicked()</signal>
   <receiver>frmInitial</receiver>
   <slot>hide()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>106</x>
     <y>142</y>
    </hint>
    <hint type="destinationlabel">
     <x>55</x>
     <y>233</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdAbout</sender>
   <signal>clicked()</signal>
   <receiver>frmAbout</receiver>
   <slot>show()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>66</x>
     <y>599</y>
    </hint>
    <hint type="destinationlabel">
     <x>531</x>
     <y>319</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdAbout</sender>
   <signal>clicked()</signal>
   <receiver>frmInitial</receiver>
   <slot>hide()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>66</x>
     <y>599</y>
    </hint>
    <hint type="destinationlabel">
     <x>66</x>
     <y>319</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdAboutBack</sender>
   <signal>clicked()</signal>
   <receiver>frmAbout</receiver>
   <slot>hide()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>496</x>
     <y>167</y>
    </hint>
    <hint type="destinationlabel">
     <x>559</x>
     <y>319</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cmdAboutBack</sender>
   <signal>clicked()</signal>
   <receiver>frmInitial</receiver>
   <slot>show()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>496</x>
     <y>167</y>
    </hint>
    <hint type="destinationlabel">
     <x>66</x>
     <y>319</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
